--- a/page2/page2.html
+++ b/page2/page2.html
@@ -133,6 +133,12 @@ body {background-image:url("fon.jpg"); background-repeat: ; background-position:
      <p class="style1"><strong>Hinweis(Рекомендую) - Select video quality to 720p HD </strong>: Film - Video Clips - Лансароте - Lanzarote - Timanfaya - Тиманфайя.</p>     
      <iframe src="https://player.vimeo.com/video/172292943" width="1280" height="720" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
  <p><img src="lineal4.jpg" alt="lineal"></p>
+
+
+  <p class="style1"><strong>Hinweis(Рекомендую) - Select video quality to 720p HD </strong>: Film - Video Clips - Португалия Алгарве - Portugal Algarve.</p>     
+     <iframe src="https://player.vimeo.com/video/192249818" width="1280" height="720" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+ <p><img src="lineal4.jpg" alt="lineal"></p>
+
  
             
      <p class="style1"><strong>Hinweis(Рекомендую) - Select video quality to 720p HD </strong>: Film - Video Clips - Выходной день в Альпах. Alpen Osterfelderkopf Garmisch Grainau Waxenstein Alpspitze.</p>     
