--- a/page2/page2.html
+++ b/page2/page2.html
@@ -31,7 +31,7 @@ body {background-image:url("fon.jpg"); background-repeat: ; background-position:
         list-style-type: none;
         border: 2px solid #9C9C9C;/*цвет линии обводки меню*/
         border-radius: 20px 5px;
-        width: 300px;
+        width: 550px;
         text-align: center;
         background-color: #CFCFCF;/*цвет подложки меню*/
       }
@@ -84,6 +84,7 @@ body {background-image:url("fon.jpg"); background-repeat: ; background-position:
 <ul id="navbar">
   <li><a href="/">Über mich</a></li>
   <li><a><span>Hobby</span></a></li>
+  <li><a href="/page3/page3.html">Videoschnitt</a></li>
 </ul>
 <!-- Код HTML  Ende Horizontal Menu  -->  
    
